[gd_scene load_steps=13 format=3 uid="uid://b2xq2jebor1dg"]

[ext_resource type="Script" path="res://mainmenu.gd" id="1_rwybm"]
[ext_resource type="Texture2D" uid="uid://dgqgmxhmq3heh" path="res://Assets/Background-3.png" id="2_56mxv"]
[ext_resource type="Texture2D" uid="uid://bmdegv2rjq7j2" path="res://Assets/TitleText.png" id="3_4eo46"]
[ext_resource type="AudioStream" uid="uid://bte7sxjd6b4nq" path="res://Assets/Menu Select.wav" id="4_xrb50"]
[ext_resource type="AudioStream" uid="uid://2ktbmviy582b" path="res://Assets/MainThemeFinal.mp3" id="5_l162h"]
[ext_resource type="AudioStream" uid="uid://dbumt5gxgymp6" path="res://Assets/Dossier Select.wav" id="5_r8ykm"]

[sub_resource type="Animation" id="Animation_yml0d"]
resource_name = "Fade_In"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kshco"]
_data = {
"Fade_In": SubResource("Animation_yml0d")
}

[sub_resource type="Animation" id="Animation_evt7g"]
resource_name = "Fade_Out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ulqrb"]
_data = {
"Fade_Out": SubResource("Animation_evt7g")
}

[sub_resource type="Animation" id="Animation_pm230"]
resource_name = "Title_Float"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG/Title:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 2.3, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1.03526, 1, 1, 1),
"update": 0,
"values": [Vector2(340, 154), Vector2(340, 161), Vector2(340, 169), Vector2(340, 149), Vector2(340, 139), Vector2(340, 154)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k11sc"]
_data = {
"Title_Float": SubResource("Animation_pm230")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rwybm")

[node name="BG" type="TextureRect" parent="."]
show_behind_parent = true
light_mask = 512
visibility_layer = 256
z_as_relative = false
layout_mode = 0
offset_right = 1917.0
offset_bottom = 1080.0
texture = ExtResource("2_56mxv")

[node name="Play" type="Button" parent="BG"]
layout_mode = 0
offset_left = 852.0
offset_top = 723.0
offset_right = 1052.0
offset_bottom = 798.0
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="Credits" type="Button" parent="BG"]
offset_left = 851.0
offset_top = 812.0
offset_right = 1051.0
offset_bottom = 887.0
theme_override_font_sizes/font_size = 40
text = "Credits"

[node name="Exit" type="Button" parent="BG"]
layout_mode = 0
offset_left = 851.0
offset_top = 904.0
offset_right = 1051.0
offset_bottom = 979.0
theme_override_font_sizes/font_size = 40
text = "Exit"

[node name="Title" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 340.0
offset_top = 154.0
offset_right = 1640.0
offset_bottom = 402.0
texture = ExtResource("3_4eo46")

[node name="SelectUIAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_xrb50")
volume_db = 20.0

[node name="MouseHoverAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_r8ykm")

[node name="Main Theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_l162h")
autoplay = true

[node name="Timer" type="Timer" parent="."]

[node name="Fade" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(48, 27)
color = Color(0, 0, 0, 1)

[node name="FadeIn" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kshco")
}

[node name="FadeOut" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ulqrb")
}

[node name="TitleFloat" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k11sc")
}

[connection signal="mouse_entered" from="BG/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="BG/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="BG/Credits" to="." method="_on_credits_mouse_entered"]
[connection signal="pressed" from="BG/Credits" to="." method="_on_credits_pressed"]
[connection signal="mouse_entered" from="BG/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="BG/Exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="TitleFloat" to="." method="_on_title_float_animation_finished"]
